--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <header>
-        <div>Portfolio</div>
+        <div>Sudarshan's Portfolio</div>
         <div class="hamburger" onclick="toggleMenu()">
             <div></div>
             <div></div>
