--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             margin: 0;
@@ -86,8 +87,7 @@
         .vertical-line {
             position: fixed;
             left: 30px;
-            top: 50%;
-            transform: translateY(-50%);
+            bottom: 50px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -101,11 +101,22 @@
             display: block;
         }
 
+        .vertical-line span {
+            margin-bottom: 10px;
+            font-size: 16px;
+            color: #333;
+        }
+
         .icon {
             margin: 10px 0;
             color: #333;
             text-decoration: none;
             font-size: 24px;
+            transition: color 0.3s ease;
+        }
+
+        .icon:hover {
+            color: #007bff;
         }
     </style>
 </head>
@@ -124,10 +135,19 @@
         <a href="contact.html">Contact</a>
     </div>
     <div class="vertical-line">
-        <a href="#" class="icon">📸</a>
-        <a href="#" class="icon">🔗</a>
-        <a href="#" class="icon">🐙</a>
-        <a href="#" class="icon">📧</a>
+        <span>Reach out @</span>
+        <a href="https://www.instagram.com" class="icon" target="_blank" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com" class="icon" target="_blank" aria-label="LinkedIn">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.github.com" class="icon" target="_blank" aria-label="GitHub">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="mailto:example@example.com" class="icon" target="_blank" aria-label="Email">
+            <i class="fas fa-envelope"></i>
+        </a>
     </div>
     <main>
         <h1>Coming Soon!</h1>
