--- a/index.html
+++ b/index.html
@@ -84,14 +84,15 @@
             font-weight: bold;
         }
 
-        .vertical-line {
-            position: fixed;
-            left: 30px;
-            bottom: 50px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        .vertical-line span {
+            writing-mode: vertical-rl; /* Rotates text vertically */
+            text-orientation: mixed;  /* Keeps the text upright */
+            margin-bottom: 10px;
+            font-size: 16px;
+            color: #333;
+            transform: rotate(180deg); /* Flips the text to read top-down */
         }
+
 
         .vertical-line::before {
             content: "";
@@ -134,8 +135,7 @@
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </div>
-    <div class="vertical-line">
-        <span>Reach out @</span>
+    <div>
         <a href="https://www.instagram.com" class="icon" target="_blank" aria-label="Instagram">
             <i class="fab fa-instagram"></i>
         </a>
@@ -148,6 +148,9 @@
         <a href="mailto:example@example.com" class="icon" target="_blank" aria-label="Email">
             <i class="fas fa-envelope"></i>
         </a>
+    </div>
+    <div class="vertical-line">
+        <span>Reach out @</span>
     </div>
     <main>
         <h1>Coming Soon!</h1>
